src/styles/card.scss
.card {
  display: flex;
  flex-direction: column;
  width: 250px;
  border: 1px solid #f5f5f5;
  margin: 8px;

  &-image {
    width: 100%;
    height: 140px;
  }

  &-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px 10px;

    &-header {
      font-size: 18px;
      font-weight: bold;
      margin-bottom: 5px;
    }
  }
}

